<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="16dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add Channel"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/channel_name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:hint="@string/channel_name_here"
        />

    <EditText
        android:id="@+id/channel_description_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:hint="@string/channel_description_here"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_channel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Widget.ColorChar.Button"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="@string/cancel"
            />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/submit_channel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="@string/submit"
            />

    </LinearLayout>

</LinearLayout>